--- a/public/views/register.html
+++ b/public/views/register.html
@@ -9,11 +9,12 @@
 </head>
 <body>
     <div class="w-full min-h-screen flex flex-col border border-red-900 items-center justify-center">
-        <img src="img/logo.png" alt="" class="w-28">
+        <img src="img/register-14.png" alt="" class="w-28">
         <h1>Register</h1>
-        <form action="" method="POST" class="w-72 flex flex-col">
-            <input type="text" class="border border-gray-900 p-1 my-1" placeholder="Enter username">
-            <input type="password" class="border border-gray-900 p-1 my-1" placeholder="Enter password">
+        <form action="/register" method="POST" class="w-72 flex flex-col">
+            <input type="text" class="border border-gray-900 p-1 my-1" name="username" placeholder="Enter username">
+            <input type="password" class="border border-gray-900 p-1 my-1" name="password" placeholder="Enter password">
+            <input type="text" class="border border-gray-900 p-1 my-1" name="contactNumber" placeholder="Enter contact number">
             <input type="submit" class="border border-gray-900" value="Sign up">
         </form>
     </div>
