--- a/public/views/index.html
+++ b/public/views/index.html
@@ -10,9 +10,9 @@
 <body>
     <div class="w-full min-h-screen flex flex-col border border-red-900 items-center justify-center">
         <img src="img/logo.png" alt="" class="w-28">
-        <form action="" method="POST" class="w-72 flex flex-col">
-            <input type="text" class="border border-gray-900 p-1 my-1" placeholder="Enter username">
-            <input type="text" class="border border-gray-900 p-1 my-1" placeholder="Enter password">
+        <form action="/login" method="POST" class="w-72 flex flex-col">
+            <input type="text" class="border border-gray-900 p-1 my-1" name='username'placeholder="Enter username">
+            <input type="text" class="border border-gray-900 p-1 my-1" name='rawPassword'placeholder="Enter password">
             <input type="submit" class="border border-gray-900" value="Login">
         </form>
     </div>
