Header for dashboard

--- a/public/views/welcome.html
+++ b/public/views/welcome.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <script src="https://cdn.tailwindcss.com"></script>
     <title>Document</title>
 </head>
 <body>
-    
+    <header class="w-screen h-12 shadow-lg flex items-center p-2">
+        <img src="/public/img/Burger.png" width="40px">
+        <p class="text-center mx-auto">Welcome [User]</p>
+    </header>
 </body>
 </html>
