--- a/public/views/welcome.html
+++ b/public/views/welcome.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <script src="https://cdn.tailwindcss.com"></script>
+    <link rel="stylesheet" type='text/css' href="/public/css/style.css">
     <title>Document</title>
 </head>
 <body>
@@ -12,5 +13,13 @@
         <img src="/public/img/Burger.png" width="40px">
         <p class="text-center mx-auto">Welcome [User]</p>
     </header>
+    <nav>
+        <ul>
+            <li><a href="">HOME</a></li>
+            <li><a href="">WEB CALL</a></li>
+            <li><a href="">SEND MSG TO USER</a></li>
+            <li><a href="">SEND TO NUMBER</a></li>
+        </ul>
+    </nav>
 </body>
 </html>
