--- a/public/css/style.css
+++ b/public/css/style.css
@@ -13,8 +13,10 @@ nav{
 #burger{
     cursor: pointer;
 }
-ul li{
+#navChildren{
     display: none;
+}
+ul li{
     padding: 8px 8px 8px 32px;
     text-decoration: none;
     font-size: 18px;
