--- a/public/views/welcome.html
+++ b/public/views/welcome.html
@@ -10,16 +10,18 @@
 </head>
 <body>
     <header class="w-screen h-12 shadow-lg flex items-center p-2">
-        <img src="/public/img/Burger.png" width="40px">
+        <img src="/public/img/Burger.png" width="40px" id="burger">
         <p class="text-center mx-auto">Welcome [User]</p>
     </header>
     <nav>
-        <ul>
+        <img src="/public/img/Burger.png" width="40px" id="burger2">
+        <ul id="navChildren">
             <li><a href="">HOME</a></li>
             <li><a href="">WEB CALL</a></li>
             <li><a href="">SEND MSG TO USER</a></li>
             <li><a href="">SEND TO NUMBER</a></li>
         </ul>
     </nav>
+    <script src="/public/js/nav.js"></script>
 </body>
 </html>
