Added styles to form and installed websockets

--- a/public/views/welcome.html
+++ b/public/views/welcome.html
@@ -22,6 +22,14 @@
             <li><a href="">SEND TO NUMBER</a></li>
         </ul>
     </nav>
+    <main>
+        <form action="/contact" id="contactForm">
+            <p>Email me to contact me using this nodemailer</p>
+            <input type="text" placeholder="To:">
+            <input type="text" placeholder="From:">
+            <textarea name="" id="" cols="30" rows="10"></textarea>
+        </form>
+    </main>
     <script src="/public/js/nav.js"></script>
 </body>
 </html>
