--- a/public/css/style.css
+++ b/public/css/style.css
@@ -43,3 +43,39 @@ input[type='text']{
     margin: 10px 0;
     padding: 5px 12px;
 }
+.container{
+    width: 80%;
+    margin: 0 auto;
+    /* border: 1px solid red; */
+    display: flex;
+    flex-direction: column;
+    padding: 12px 0;
+}
+.boxes{
+    margin-top: 25px;
+    background-color: white;
+    box-shadow: 1px 1px 10px 4px rgba(0, 0, 0, 0.192);
+    width: 30%;
+    text-align: center;
+    padding: 25px 0;
+    border-radius: 6px;
+    cursor: pointer;
+}
+.button{
+    padding: 5px 12px;
+    border: 1px solid black;
+    cursor: pointer;
+}
+.msg-conatiner{
+    display: flex;
+    flex-direction: column;
+    overflow-y: scroll;
+    width: 100%;
+    height: 400px;
+    padding: 25px;
+    background-color: white;
+    border: 1px solid rgba(0, 0, 0, 0.219);
+}
+.msg-conatiner ul li:nth-child(even){
+    background-color: rgba(0, 0, 0, 0.185);
+}
