added place holders for message

--- a/public/views/private-room.ejs
+++ b/public/views/private-room.ejs
@@ -29,8 +29,14 @@
                 </ul>
             </div>
             <div style="display: flex; flex-direction: row;">
-                <input type="text" id="msgVal" name="data">
+                <div style="display: flex; flex-direction: column;">
+                    <input type="text" id="msgVal" name="data" placeholder="Send msg">
+                    <input type="text" id="roomVal" name="data" placeholder="Send msg">
+                    
+                </div>
                 <input type="button" value="SEND" class="button" id="button">
+                <input type="button" value="Join Room" class="button" id="button">
+
             </div>
         </div>
 
