--- a/public/views/public-room.ejs
+++ b/public/views/public-room.ejs
@@ -31,7 +31,7 @@
                 </ul>
             </div>
             <div style="display: flex; flex-direction: row;">
-                <input type="text" id="msgVal" name="data">
+                <input type="text" id="msgVal" name="data" placeholder="Send msg">
                 <input type="button" value="SEND" class="button" id="button">
             </div>
         </div>
